feat:change html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <button class="tools_btn">Search</button>
             </div>
           </form>
-        
+
           <ul class="tools_list">
             <li class="tools_item">
               <img
@@ -92,125 +92,139 @@
       <section class="popular">
         <div class="container">
           <h1 class="popular_title">Most Popular Tools</h1>
-          <h3 class="popular_subtitle">Tools for the best Designers and Developers
-            most popularly used in the world</h3>
-            <ul class="popular_list">
-              <li class="popular_item">
-                <div class="popular_wrapper">
-                  <div class="popular_wrap">
-                    <img src="./src/icons/figma.svg" alt="figma">
-                    <div class="popular_desc">
-                      <h3 class="popular_desc-title">FIGMA</h3>
-                      <h4 class="popular_desc-subtitle">Free</h4>
-                    </div>
-                  </div>
-                  <p class="popular_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                  <div class="popular_icon">
-                    <div class="popular_icon-img">
-                      <img src="./src/icons/like.svg" alt="like">
-                      <img src="./src/icons/folder.svg" alt="folder">
-                    </div>
-                    <button class="popular_icon-button">Visit</button>
+          <h3 class="popular_subtitle">
+            Tools for the best Designers and Developers most popularly used in
+            the world
+          </h3>
+          <ul class="popular_list">
+            <li class="popular_item">
+              <div class="popular_wrapper">
+                <div class="popular_wrap">
+                  <img src="./src/icons/figma.svg" alt="figma" />
+                  <div class="popular_desc">
+                    <h3 class="popular_desc-title">FIGMA</h3>
+                    <h4 class="popular_desc-subtitle">Free</h4>
                   </div>
                 </div>
-              </li>
-              <li class="popular_item">
-                <div class="popular_wrapper">
-                  <div class="popular_wrap">
-                    <img src="./src/icons/sketch.svg" alt="sketch">
-                    <div class="popular_desc">
-                      <h3 class="popular_desc-title">Sketch</h3>
-                      <h4 class="popular_desc-subtitle">Trial & Paid</h4>
-                    </div>
+                <p class="popular_text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <div class="popular_icon">
+                  <div class="popular_icon-img">
+                    <img src="./src/icons/like.svg" alt="like" />
+                    <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <p class="popular_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                  <div class="popular_icon">
-                    <div class="popular_icon-img">
-                      <img src="./src/icons/like.svg" alt="like">
-                      <img src="./src/icons/folder.svg" alt="folder">
-                    </div>
-                    <button class="popular_icon-button">Visit</button>
+                  <button class="popular_icon-button">Visit</button>
+                </div>
+              </div>
+            </li>
+            <li class="popular_item">
+              <div class="popular_wrapper">
+                <div class="popular_wrap">
+                  <img src="./src/icons/sketch.svg" alt="sketch" />
+                  <div class="popular_desc">
+                    <h3 class="popular_desc-title">Sketch</h3>
+                    <h4 class="popular_desc-subtitle">Trial & Paid</h4>
                   </div>
                 </div>
-              </li>
-              <li class="popular_item">
-                <div class="popular_wrapper">
-                  <div class="popular_wrap">
-                    <img src="./src/icons/vscode.svg" alt="vscode">
-                    <div class="popular_desc">
-                      <h3 class="popular_desc-title">Visual Studio Code</h3>
-                      <h4 class="popular_desc-subtitle">Free</h4>
-                    </div>
+                <p class="popular_text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <div class="popular_icon">
+                  <div class="popular_icon-img">
+                    <img src="./src/icons/like.svg" alt="like" />
+                    <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <p class="popular_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                  <div class="popular_icon">
-                    <div class="popular_icon-img">
-                      <img src="./src/icons/like.svg" alt="like">
-                      <img src="./src/icons/folder.svg" alt="folder">
-                    </div>
-                    <button class="popular_icon-button">Visit</button>
+                  <button class="popular_icon-button">Visit</button>
+                </div>
+              </div>
+            </li>
+            <li class="popular_item">
+              <div class="popular_wrapper">
+                <div class="popular_wrap">
+                  <img src="./src/icons/vscode.svg" alt="vscode" />
+                  <div class="popular_desc">
+                    <h3 class="popular_desc-title">Visual Studio Code</h3>
+                    <h4 class="popular_desc-subtitle">Free</h4>
                   </div>
                 </div>
-              </li>
-              <li class="popular_item">
-                <div class="popular_wrapper">
-                  <div class="popular_wrap">
-                    <img src="./src/icons/notion.svg" alt="notion">
-                    <div class="popular_desc">
-                      <h3 class="popular_desc-title">Notion</h3>
-                      <h4 class="popular_desc-subtitle">Free & Paid</h4>
-                    </div>
+                <p class="popular_text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <div class="popular_icon">
+                  <div class="popular_icon-img">
+                    <img src="./src/icons/like.svg" alt="like" />
+                    <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <p class="popular_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                  <div class="popular_icon">
-                    <div class="popular_icon-img">
-                      <img src="./src/icons/like.svg" alt="like">
-                      <img src="./src/icons/folder.svg" alt="folder">
-                    </div>
-                    <button class="popular_icon-button">Visit</button>
+                  <button class="popular_icon-button">Visit</button>
+                </div>
+              </div>
+            </li>
+            <li class="popular_item">
+              <div class="popular_wrapper">
+                <div class="popular_wrap">
+                  <img src="./src/icons/notion.svg" alt="notion" />
+                  <div class="popular_desc">
+                    <h3 class="popular_desc-title">Notion</h3>
+                    <h4 class="popular_desc-subtitle">Free & Paid</h4>
                   </div>
                 </div>
-              </li>
-              <li class="popular_item">
-                <div class="popular_wrapper">
-                  <div class="popular_wrap">
-                    <img src="./src/icons/slack.svg" alt="slack">
-                    <div class="popular_desc">
-                      <h3 class="popular_desc-title">Slack</h3>
-                      <h4 class="popular_desc-subtitle">Free & Paid</h4>
-                    </div>
+                <p class="popular_text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <div class="popular_icon">
+                  <div class="popular_icon-img">
+                    <img src="./src/icons/like.svg" alt="like" />
+                    <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <p class="popular_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                  <div class="popular_icon">
-                    <div class="popular_icon-img">
-                      <img src="./src/icons/like.svg" alt="like">
-                      <img src="./src/icons/folder.svg" alt="folder">
-                    </div>
-                    <button class="popular_icon-button">Visit</button>
+                  <button class="popular_icon-button">Visit</button>
+                </div>
+              </div>
+            </li>
+            <li class="popular_item">
+              <div class="popular_wrapper">
+                <div class="popular_wrap">
+                  <img src="./src/icons/slack.svg" alt="slack" />
+                  <div class="popular_desc">
+                    <h3 class="popular_desc-title">Slack</h3>
+                    <h4 class="popular_desc-subtitle">Free & Paid</h4>
                   </div>
                 </div>
-              </li>
-              <li class="popular_item">
-                <div class="popular_wrapper">
-                  <div class="popular_wrap">
-                    <img src="./src/icons/invision.svg" alt="invision">
-                    <div class="popular_desc">
-                      <h3 class="popular_desc-title">Invision</h3>
-                      <h4 class="popular_desc-subtitle">Free & Paid</h4>
-                    </div>
+                <p class="popular_text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <div class="popular_icon">
+                  <div class="popular_icon-img">
+                    <img src="./src/icons/like.svg" alt="like" />
+                    <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <p class="popular_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                  <div class="popular_icon">
-                    <div class="popular_icon-img">
-                      <img src="./src/icons/like.svg" alt="like">
-                      <img src="./src/icons/folder.svg" alt="folder">
-                    </div>
-                    <button class="popular_icon-button">Visit</button>
+                  <button class="popular_icon-button">Visit</button>
+                </div>
+              </div>
+            </li>
+            <li class="popular_item">
+              <div class="popular_wrapper">
+                <div class="popular_wrap">
+                  <img src="./src/icons/invision.svg" alt="invision" />
+                  <div class="popular_desc">
+                    <h3 class="popular_desc-title">Invision</h3>
+                    <h4 class="popular_desc-subtitle">Free & Paid</h4>
                   </div>
                 </div>
-              </li>
-            </ul>
-            <div class="popular_btns">
+                <p class="popular_text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
+                <div class="popular_icon">
+                  <div class="popular_icon-img">
+                    <img src="./src/icons/like.svg" alt="like" />
+                    <img src="./src/icons/folder.svg" alt="folder" />
+                  </div>
+                  <button class="popular_icon-button">Visit</button>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <div class="popular_btns">
             <button class="popular_btn">Load more</button>
           </div>
         </div>
@@ -220,40 +234,47 @@
           <h3 class="brand_title">Trusted more than 150+ brand</h3>
           <ul class="brand_list">
             <li class="brand_item">
-              <img src="./src/icons/microsoft.svg" alt="microsoft">
+              <img src="./src/icons/microsoft.svg" alt="microsoft" />
             </li>
             <li class="brand_item">
-              <img src="./src/icons/google.svg" alt="google">
+              <img src="./src/icons/google.svg" alt="google" />
             </li>
             <li class="brand_item">
-              <img src="./src/icons/logosslack.svg" alt="logosslack">
+              <img src="./src/icons/logosslack.svg" alt="logosslack" />
             </li>
             <li class="brand_item">
-              <img src="./src/icons/wordpress.svg" alt="wordpress">
+              <img src="./src/icons/wordpress.svg" alt="wordpress" />
             </li>
           </ul>
         </div>
       </section>
       <section class="newcomer">
         <div class="container">
-          <h2 class="newcomer_title">Newcomer Tools</h2>
-          <p class="newcomer_p">Wow! see the latest update of the most recommended tools from reliable designers and developers</p>
-          <button class="newcomer_btn">Explore more</button>
+          <div class="newcomer_box">
+            <h2 class="newcomer_title">Newcomer Tools</h2>
+            <p class="newcomer_p">
+              Wow! see the latest update of the most recommended tools from
+              reliable designers and developers
+            </p>
+            <button class="newcomer_btn">Explore more</button>
+          </div>
           <ul class="newcomer_list">
             <li class="newcomer_item">
               <div class="newcomer_wrapper">
                 <div class="newcomer_wrap">
-                  <img src="./src/icons/zeplin.svg" alt="zeplin">
+                  <img src="./src/icons/zeplin.svg" alt="zeplin" />
                   <div class="newcomer_desc">
                     <h3 class="newcomer_desc-title">Zeplin</h3>
                     <h4 class="newcomer_desc-subtitle">Free & Paid</h4>
                   </div>
                 </div>
-                <p class="newcomer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="newcomer_text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
                 <div class="newcomer_icon">
                   <div class="newcomer_icon-img">
-                    <img src="./src/icons/like.svg" alt="like">
-                    <img src="./src/icons/folder.svg" alt="folder">
+                    <img src="./src/icons/like.svg" alt="like" />
+                    <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
                   <button class="newcomer_icon-button">Visit</button>
                 </div>
@@ -262,17 +283,19 @@
             <li class="newcomer_item">
               <div class="newcomer_wrapper">
                 <div class="newcomer_wrap">
-                  <img src="./src/icons/phpstorm.svg" alt="phpstorm">
+                  <img src="./src/icons/phpstorm.svg" alt="phpstorm" />
                   <div class="newcomer_desc">
                     <h3 class="newcomer_desc-title">PHPStorm</h3>
                     <h4 class="newcomer_desc-subtitle">Free</h4>
                   </div>
                 </div>
-                <p class="newcomer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="newcomer_text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
                 <div class="newcomer_icon">
                   <div class="newcomer_icon-img">
-                    <img src="./src/icons/like.svg" alt="like">
-                    <img src="./src/icons/folder.svg" alt="folder">
+                    <img src="./src/icons/like.svg" alt="like" />
+                    <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
                   <button class="newcomer_icon-button">Visit</button>
                 </div>
@@ -281,17 +304,19 @@
             <li class="newcomer_item">
               <div class="newcomer_wrapper">
                 <div class="newcomer_wrap">
-                  <img src="./src/icons/toolbox.svg" alt="toolbox">
+                  <img src="./src/icons/toolbox.svg" alt="toolbox" />
                   <div class="newcomer_desc">
                     <h3 class="newcomer_desc-title">Toolbox</h3>
                     <h4 class="newcomer_desc-subtitle">Free</h4>
                   </div>
                 </div>
-                <p class="newcomer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="newcomer_text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
                 <div class="newcomer_icon">
                   <div class="newcomer_icon-img">
-                    <img src="./src/icons/like.svg" alt="like">
-                    <img src="./src/icons/folder.svg" alt="folder">
+                    <img src="./src/icons/like.svg" alt="like" />
+                    <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
                   <button class="newcomer_icon-button">Visit</button>
                 </div>
@@ -300,17 +325,19 @@
             <li class="newcomer_item">
               <div class="newcomer_wrapper">
                 <div class="newcomer_wrap">
-                  <img src="./src/icons/procreate.svg" alt="procreate">
+                  <img src="./src/icons/procreate.svg" alt="procreate" />
                   <div class="newcomer_desc">
                     <h3 class="newcomer_desc-title">Procreate</h3>
                     <h4 class="newcomer_desc-subtitle">Paid</h4>
                   </div>
                 </div>
-                <p class="newcomer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="newcomer_text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
                 <div class="newcomer_icon">
                   <div class="newcomer_icon-img">
-                    <img src="./src/icons/like.svg" alt="like">
-                    <img src="./src/icons/folder.svg" alt="folder">
+                    <img src="./src/icons/like.svg" alt="like" />
+                    <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
                   <button class="newcomer_icon-button">Visit</button>
                 </div>
@@ -321,9 +348,22 @@
       </section>
       <section class="ronald">
         <div class="container">
-          <img src="./src/icons/chevronleft.svg" alt="chevronleft">
-          <img src="./src/img/david.jpg" alt="david">
-          <img src="./src/icons/chevron-right.svg" alt="chevron-right">
+          <div class="ronald_wrap">
+            <img class="ronald_wrap-img" src="./src/icons/chevronleft.svg" alt="chevronleft" />
+          <img src="./src/img/david.png" alt="david" />
+          <div class="ronald_wrapper">
+            <img src="./src/icons/koma.svg" alt="koma" />
+            <p class="ronald_wrapper-text">
+              Incididunt cillum do sint sint enim ullamco id deserunt mollit qui
+              reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do
+              nulla velit labore occaecat do deserunt Lorem magna officia
+              incididunt consectetur amet. Sunt consectetur veniam minim ex
+              commodo sint non. Occaecat aute officia excepteur non laboris id
+              qui ad.
+            </p>
+          </div>
+          <img src="./src/icons/chevronleft.svg" alt="chevronleft" />
+          </div>
         </div>
       </section>
     </main>
