feat:change html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
                     <img src="./src/icons/like.svg" alt="like" />
                     <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <button class="popular_icon-button">Visit</button>
+                  <button class="popular_icon-button">
+                    <a class="popular_icon-button" href="#">Visit</a>
+                  </button>
                 </div>
               </div>
             </li>
@@ -135,7 +137,9 @@
                     <img src="./src/icons/like.svg" alt="like" />
                     <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <button class="popular_icon-button">Visit</button>
+                  <button class="popular_icon-button">
+                    <a class="popular_icon-button" href="#">Visit</a>
+                  </button>
                 </div>
               </div>
             </li>
@@ -156,7 +160,9 @@
                     <img src="./src/icons/like.svg" alt="like" />
                     <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <button class="popular_icon-button">Visit</button>
+                  <button class="popular_icon-button">
+                    <a class="popular_icon-button" href="#">Visit</a>
+                  </button>
                 </div>
               </div>
             </li>
@@ -177,7 +183,9 @@
                     <img src="./src/icons/like.svg" alt="like" />
                     <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <button class="popular_icon-button">Visit</button>
+                  <button class="popular_icon-button">
+                    <a class="popular_icon-button" href="#">Visit</a>
+                  </button>
                 </div>
               </div>
             </li>
@@ -198,7 +206,9 @@
                     <img src="./src/icons/like.svg" alt="like" />
                     <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <button class="popular_icon-button">Visit</button>
+                  <button class="popular_icon-button">
+                    <a class="popular_icon-button" href="#">Visit</a>
+                  </button>
                 </div>
               </div>
             </li>
@@ -219,7 +229,9 @@
                     <img src="./src/icons/like.svg" alt="like" />
                     <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <button class="popular_icon-button">Visit</button>
+                  <button class="popular_icon-button">
+                    <a class="popular_icon-button" href="#">Visit</a>
+                  </button>
                 </div>
               </div>
             </li>
@@ -276,7 +288,9 @@
                     <img src="./src/icons/like.svg" alt="like" />
                     <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <button class="newcomer_icon-button">Visit</button>
+                  <button class="newcomer_icon-button">
+                    <a class="newcomer_icon-button" href="#">Visit</a>
+                  </button>
                 </div>
               </div>
             </li>
@@ -297,7 +311,9 @@
                     <img src="./src/icons/like.svg" alt="like" />
                     <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <button class="newcomer_icon-button">Visit</button>
+                  <button class="newcomer_icon-button">
+                    <a class="newcomer_icon-button" href="#">Visit</a>
+                  </button>
                 </div>
               </div>
             </li>
@@ -318,7 +334,9 @@
                     <img src="./src/icons/like.svg" alt="like" />
                     <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <button class="newcomer_icon-button">Visit</button>
+                  <button class="newcomer_icon-button">
+                    <a class="newcomer_icon-button" href="#">Visit</a>
+                  </button>
                 </div>
               </div>
             </li>
@@ -339,7 +357,9 @@
                     <img src="./src/icons/like.svg" alt="like" />
                     <img src="./src/icons/folder.svg" alt="folder" />
                   </div>
-                  <button class="newcomer_icon-button">Visit</button>
+                  <button class="newcomer_icon-button">
+                    <a class="newcomer_icon-button" href="#">Visit</a>
+                  </button>
                 </div>
               </div>
             </li>
@@ -349,20 +369,27 @@
       <section class="ronald">
         <div class="container">
           <div class="ronald_wrap">
-            <img class="ronald_wrap-img" src="./src/icons/chevronleft.svg" alt="chevronleft" />
-          <img src="./src/img/david.png" alt="david" />
-          <div class="ronald_wrapper">
-            <img src="./src/icons/koma.svg" alt="koma" />
-            <p class="ronald_wrapper-text">
-              Incididunt cillum do sint sint enim ullamco id deserunt mollit qui
-              reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do
-              nulla velit labore occaecat do deserunt Lorem magna officia
-              incididunt consectetur amet. Sunt consectetur veniam minim ex
-              commodo sint non. Occaecat aute officia excepteur non laboris id
-              qui ad.
-            </p>
-          </div>
-          <img src="./src/icons/chevronleft.svg" alt="chevronleft" />
+           <div class="ronald_slider"> <svg class="ronald_arrow-left" xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none"><path stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-opacity=".28" stroke-width="3" d="M30 36 18 24l12-12"/></svg>
+            <div class="ronald_content">
+              <img src="./src/img/david.png" alt="david" />
+            <div class="ronald_wrapper">
+              <img src="./src/icons/koma.svg" alt="koma" />
+              <p class="ronald_wrapper-text">
+                Incididunt cillum do sint sint enim ullamco id deserunt mollit qui
+                reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do
+                nulla velit labore occaecat do deserunt Lorem magna officia
+                incididunt consectetur amet. Sunt consectetur veniam minim ex
+                commodo sint non. Occaecat aute officia excepteur non laboris id
+                qui ad.
+              </p>
+            </div>
+            </div>
+            <svg class="ronald_arrow-right" xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none"><path stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-opacity=".28" stroke-width="3" d="M30 36 18 24l12-12"/></svg></div>
+          <ul class="ronald_list">
+            <li class="ronald_item"></li>
+            <li class="ronald_item"></li>
+            <li class="ronald_item"></li>
+          </ul>
           </div>
         </div>
       </section>
