feat:change html

--- a/index.html
+++ b/index.html
@@ -369,27 +369,76 @@
       <section class="ronald">
         <div class="container">
           <div class="ronald_wrap">
-           <div class="ronald_slider"> <svg class="ronald_arrow-left" xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none"><path stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-opacity=".28" stroke-width="3" d="M30 36 18 24l12-12"/></svg>
-            <div class="ronald_content">
-              <img src="./src/img/david.png" alt="david" />
-            <div class="ronald_wrapper">
-              <img src="./src/icons/koma.svg" alt="koma" />
-              <p class="ronald_wrapper-text">
-                Incididunt cillum do sint sint enim ullamco id deserunt mollit qui
-                reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do
-                nulla velit labore occaecat do deserunt Lorem magna officia
-                incididunt consectetur amet. Sunt consectetur veniam minim ex
-                commodo sint non. Occaecat aute officia excepteur non laboris id
-                qui ad.
-              </p>
+            <div class="ronald_slider">
+              <svg
+                class="ronald_arrow-left"
+                xmlns="http://www.w3.org/2000/svg"
+                width="48"
+                height="48"
+                fill="none"
+              >
+                <path
+                  stroke="#fff"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-opacity=".28"
+                  stroke-width="3"
+                  d="M30 36 18 24l12-12"
+                />
+              </svg>
+              <div class="ronald_content">
+                <img src="./src/img/david.png" alt="david" />
+                <div class="ronald_wrapper">
+                  <img src="./src/icons/koma.svg" alt="koma" />
+                  <p class="ronald_wrapper-text">
+                    Incididunt cillum do sint sint enim ullamco id deserunt
+                    mollit qui reprehenderit do. Velit ex tempor cillum ad sint
+                    occaecat. Do nulla velit labore occaecat do deserunt Lorem
+                    magna officia incididunt consectetur amet. Sunt consectetur
+                    veniam minim ex commodo sint non. Occaecat aute officia
+                    excepteur non laboris id qui ad.
+                  </p>
+                </div>
+              </div>
+              <svg
+                class="ronald_arrow-right"
+                xmlns="http://www.w3.org/2000/svg"
+                width="48"
+                height="48"
+                fill="none"
+              >
+                <path
+                  stroke="#fff"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-opacity=".28"
+                  stroke-width="3"
+                  d="M30 36 18 24l12-12"
+                />
+              </svg>
             </div>
-            </div>
-            <svg class="ronald_arrow-right" xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="none"><path stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-opacity=".28" stroke-width="3" d="M30 36 18 24l12-12"/></svg></div>
-          <ul class="ronald_list">
-            <li class="ronald_item"></li>
-            <li class="ronald_item"></li>
-            <li class="ronald_item"></li>
-          </ul>
+            <ul class="ronald_list">
+              <li class="ronald_item"></li>
+              <li class="ronald_item"></li>
+              <li class="ronald_item"></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="become">
+        <div class="container">
+          <div class="become_wrapper">
+            <h2 class="become_title">Become a contributor?</h2>
+            <p class="become_desc">
+              Join us and get tips & tricks to become a great Designer and
+              Developer
+            </p>
+            <form class="become_form" action="#">
+              <div class="become_wrapp">
+                <input type="text" placeholder="Enter your email..." />
+                <button class="become_btn">Join Us</button>
+              </div>
+            </form>
           </div>
         </div>
       </section>
